--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   0 GB
   1000 GB
   </main>
-  
+
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/in/martin-eli%C3%A1%C5%A1-455550209/">Martin Eliáš</a>.
     </div>
   </footer>
 </body>
