replaced img for a, added classes

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       
       <ul>
         <li>
-          <img src="/assets/img/icon-document.svg" alt="">
+          <a href="#" class="document"></a>
         </li>
         <li>
-          <img src="/assets/img/icon-folder.svg" alt="">
+          <a href="#" class="folder"></a>
         </li>
         <li>
-          <img src="/assets/img/icon-upload.svg" alt="">
+          <a href="#" class="upload"></a>
         </li>
       </ul>
     </div>
