ul class added, progress tag updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       <img src="/assets/img/logo.svg" alt="">
       
-      <ul>
+      <ul class="icons">
         <li>
           <a href="#" class="document"></a>
         </li>
@@ -37,7 +37,7 @@
       185 GB Left
       <p>You’ve used 815 GB of your storage</p>
 
-      <progress min="0 GB" max="1000 GB" value="815"></progress>
+      <progress max="1000" value="815">0 GB 1000 GB</progress>
 
     </div>
   </main>
