added min-max element

--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
       
       <div class="storage-bar">
         <div class="storage-left">185 GB Left</div>
-        
+
         <p>You’ve used <span>815 GB</span> of your storage</p>
 
-        <progress max="1000" value="815">0 GB 1000 GB</progress>
+        <progress max="1000" value="815"></progress>
+
+        <div class="min-max">
+          <p>0 GB</p> 
+          <p>1000 GB</p>
+        </div>
 
       </div>
     </div>
