.storage-text class added, fixed

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
       </div>
       
       <div class="storage-bar">
-        <div class="storage-left">185 GB Left</div>
 
-        <p>You’ve used <span>815 GB</span> of your storage</p>
+        <div class="storage-text">
+          <p>You’ve used <span>815 GB</span> of your storage</p>
+          <p class="storage-left">185 GB Left</p>
+        </div>
 
         <progress max="1000" value="815"></progress>
 
