storage-left element fixed

--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
       <div class="storage-bar">
 
         <div class="storage-text">
+
           <p>You’ve used <span>815 GB</span> of your storage</p>
-          <p class="storage-left">185 GB Left</p>
+          
+          <div class="storage-left">
+            
+            <h1>185</h1>
+            <p>GB Left</p>
+
+          </div>
         </div>
 
         <progress max="1000" value="815"></progress>
