span replaced for em

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="storage-text">
 
-          <p>You’ve used <span>815 GB</span> of your storage</p>
+          <p>You’ve used <em>815 GB</em> of your storage</p>
           
           <div class="storage-left">
             
