aria-labels added

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         
         <ul class="icons">
           <li>
-            <a href="#" class="document"></a>
+            <a href="#" class="document" aria-label="Upload a file"></a>
           </li>
           <li>
-            <a href="#" class="folder"></a>
+            <a href="#" class="folder" aria-label="Upload a folder"></a>
           </li>
           <li>
-            <a href="#" class="upload"></a>
+            <a href="#" class="upload" aria-label="Upload anything you want!"></a>
           </li>
         </ul>
       </div>
